--- a/B2B.Service/B2B.Service.csproj
+++ b/B2B.Service/B2B.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\B2B.Dao\B2B.Dao.csproj" />
   </ItemGroup>
 
